# Vita-Music-Assistant

./: .gitignore  .gitmodules  BUILD_INFO.txt  CLAUDE.md  CMakeLists.txt  README.md  openapi.json  psp2core-1773662089-0x0001242fb9-eboot.bin.psp2dmp.tmp  psp2core-1773665192-0x00012c28bb-eboot.bin.psp2dmp.tmp  psp2core-1773666120-0x00029e3723-eboot.bin.psp2dmp.tmp  psp2core-1773675832-0x00013d34cd-eboot.bin.psp2dmp.tmp  psp2core-1773680039-0x0001932853-eboot.bin.psp2dmp.tmp  psp2core-1773681542-0x00000b35bb-eboot.bin.psp2dmp.tmp  psp2core-1773711605-0x00006525d5-eboot.bin.psp2dmp.tmp
.github/workflows/: build-usrsctp.yml  build-vpk.yml  symbolicate.yml
api/: Music Assistant API Documentation.html  api.txt
debug/: crash-222.psp2dmp  crash-230.psp2dmp
include/: app.h
include/activity/: login_activity.hpp  main_activity.hpp  player_activity.hpp  qr_scanner_activity.hpp
include/app/: application.hpp  ma_client.hpp  ma_types.hpp  music_queue.hpp  sendspin_client.hpp  webrtc_client.hpp  websocket_client.hpp
include/player/: mpv_player.hpp  native_audio_player.hpp
include/utils/: async.hpp  audio_stream_server.hpp  http_client.h  http_client.hpp  image_loader.hpp  qr_scanner.hpp
include/view/: debug_tab.hpp  home_tab.hpp  horizontal_scroll_row.hpp  library_section_tab.hpp  library_tab.hpp  media_detail_view.hpp  media_item_cell.hpp  music_tab.hpp  now_playing_view.hpp  overlay_dialog.hpp  progress_dialog.hpp  queue_tab.hpp  recycling_grid.hpp  search_tab.hpp  settings_tab.hpp
patches/: libdatachannel_certificate.cpp  libdatachannel_dtlstransport.cpp  libdatachannel_sctptransport.cpp  libjuice_conn_mux.c  libjuice_conn_poll.c  libjuice_conn_thread.c  libjuice_random.c  libjuice_udp.c  mbedtls_vitasdk.patch  psv_platform.cpp  usrsctp_user_environment.c  usrsctp_usrsctp_h.h
resources/i18n/en-US/: main.json
resources/xml/activity/: login.xml  player.xml  qr_scanner.xml
resources/xml/tabs/: settings.xml
sce_sys/livearea/contents/: template.xml
src/: app.cpp  main.cpp
src/activity/: login_activity.cpp  main_activity.cpp  player_activity.cpp  qr_scanner_activity.cpp
src/app/: application.cpp  ma_client.cpp  music_queue.cpp  sendspin_client.cpp  webrtc_client.cpp  websocket_client.cpp
src/platform/vita/compat/: ifaddrs.h  vita_bsd_types.h  vita_datachannel_compat.h  vita_ifaddrs.c  vita_juice_compat.h
src/platform/vita/compat/net/: if.h
src/platform/vita/compat/netinet/: in_systm.h  ip.h  udp.h
src/platform/vita/compat/sys/: ioctl.h  uio.h
src/player/: mpv_player.cpp  native_audio_player.cpp
src/utils/: audio_stream_server.cpp  http_client.cpp  image_loader.cpp  qr_scanner.cpp  vita_stubs.c
src/view/: debug_tab.cpp  home_tab.cpp  horizontal_scroll_row.cpp  library_section_tab.cpp  library_tab.cpp  media_detail_view.cpp  media_item_cell.cpp  music_tab.cpp  now_playing_view.cpp  overlay_dialog.cpp  progress_dialog.cpp  queue_tab.cpp  recycling_grid.cpp  search_tab.cpp  settings_tab.cpp
